# intro-cpp-para-programadores

./: .gitignore  README.md
docker/: Dockerfile  docker-compose.yml
explicaciones/: 0-1 - Uso de strings.ipynb  1-1 - Expresiones regulares.ipynb  1-2 - Valor vs referencia.ipynb  3-5 - Librería chrono.ipynb  5-6 - Uso de explicit.ipynb  5-7 - Semánticas de movimiento.ipynb
grep/: CMakeLists.txt  don-quijote2.txt  grep.cpp
holamundo/: holamundo.cpp
intro_catch2/: CMakeLists.txt
intro_catch2/tests/: test_factorial.cpp
laberinto/: CMakeLists.txt  main.cpp
laberinto/include/laberinto/: modelo.hpp
laberinto/src/: modelo.cpp
sudoku/: CMakeLists.txt  main.cpp
sudoku/datos/: top95.txt
sudoku/include/sudoku/: casilla.hpp  resolver.hpp  sudoku.hpp
sudoku/src/: casilla.cpp  sudoku.cpp
sudoku/tests/: pruebas_sudoku.cpp
